<resources>
    <string name="app_name">lab5pdmJava</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="search">Search</string>
    <string name="view_all">View All</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="first_name">First name</string>
    <string name="height_cm">Height(cm)</string>
    <string name="last_name">Last name</string>
    <string name="back">Back</string>
    <string name="back2">Back</string>
    <string name="enter_the_id_to_delete">Enter the id to delete</string>
    <string name="enter_the_id_to_modify">Enter the id to modify</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="update">Update</string>
    <string name="search_part_of_name_or_id">Search part of name or ID</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_first_name">Search by First name</string>
    <string name="search_by_last_name">Search by Last name</string>
</resources>