<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActivity">

    <EditText
        android:id="@+id/editTextModifyID"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_id_to_modify"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModifyFetchData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="18dp"
        android:text="@string/fetch_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyID" />

    <Button
        android:id="@+id/btnModifyBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="18dp"
        android:text="@string/back2"
        app:layout_constraintStart_toEndOf="@+id/btnModifyFetchData"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyID" />

    <EditText
        android:id="@+id/editTextModifyFirst"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModifyFetchData" />

    <EditText
        android:id="@+id/editTextModifyLast"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyFirst"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextModifyDoB"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:text="@string/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyLast" />

    <EditText
        android:id="@+id/editTextModifyHeight"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/height_cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyDoB"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnModifyUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="9dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifyHeight" />
</androidx.constraintlayout.widget.ConstraintLayout>