<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">

    <EditText
        android:id="@+id/editTextDeleteID"
        android:layout_width="339dp"
        android:layout_height="69dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="86dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_id_to_delete"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeleteDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="62dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeleteID" />

    <Button
        android:id="@+id/btnDeleteBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="62dp"
        android:text="@string/back2"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteDelete"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeleteID" />
</androidx.constraintlayout.widget.ConstraintLayout>